--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -121,6 +121,10 @@
                 .input[type=range]{
                     background: blue;
                 }
+
+                .input[type=file]{
+                    color: var(--textColor);
+                }
             }
             
             .searchOptions{
